compiler/testData/diagnostics/tests/funInterface/basicFunInterfaceDisabled.kt
// LANGUAGE: -FunctionalInterfaceConversion

<!UNSUPPORTED_FEATURE!>fun<!> interface Foo {
    fun invoke()
}
